@@ -1,5 +1,4 @@
-gopath/bin/hockeypuck-mgo /usr/bin/
+gopath/bin/hockeypuck /usr/bin/
 gopath/bin/hockeypuck-load /usr/bin/
 instroot/etc/hockeypuck /etc/
-instroot/usr/share/hockeypuck-mgo/scripts /usr/share/hockeypuck-mgo/
 instroot/var/lib/hockeypuck/www /var/lib/hockeypuck/
