@@ -1,2 +1,2 @@
-instroot/usr/share/man/man1/hockeypuck-mgo.1
+instroot/usr/share/man/man1/hockeypuck.1
 instroot/usr/share/man/man1/hockeypuck-load.1
